# ScreenSight

./: .gitignore  AGENTS.md  README.md  build_windows.bat  build_windows.ps1  screensight.spec
backend/: pyproject.toml  run.py
backend/screensight/: __init__.py  app.py  config.py  db.py  scheduler.py  tray.py
backend/screensight/api/: control.py  reports.py  search.py  settings.py  stats.py  timeline.py
backend/screensight/infra/: __init__.py  activity_monitor.py  ai_client.py  embedder.py  screenshot.py  session_monitor.py  timeutil.py
backend/screensight/prompts/: recognize.md  report_polish.md
backend/screensight/repositories/: __init__.py
backend/screensight/services/: activity_service.py  capture_service.py  recognize_service.py  report_service.py  search_service.py  storage_service.py
backend/tests/: conftest.py  test_e2e_real.py  test_infra.py  test_recognize_integration.py  test_report_search.py  test_repositories.py
docs/: ARCHITECTURE.md  PRD.md  process.md
frontend/: .gitignore  package-lock.json  package.json  screenshot.mjs  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  hashState.ts  index.css  privacy.tsx
frontend/src/pages/: Reports.tsx  Search.tsx  Settings.tsx  Timeline.tsx
